--- a/index.html
+++ b/index.html
@@ -1,34 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
-    <title>Testrepo by phpmatsuri</title>
-
-   <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Testrepo</h1>
-        <h2>test repo of github pages</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/phpmatsuri/testrepo/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/phpmatsuri/testrepo/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/phpmatsuri/testrepo" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+---
+layout: default
+title: PHPMatsuri2012 TOP
+---
 
     <div class="container">
       <section id="main_content">
@@ -41,6 +14,3 @@
   
       </section>
     </div>
-    
-  </body>
-</html>
